# crowd_density

./: .gitignore  README.md  tensorflow-requirements.txt
ccnn/: __init__.py  ccnn.py  generate-examples.py  model.py  test.py  train.py  util.py
config/: ccnn_cfg.yml
crowd-gym/: tensorflow-requirements.txt
docs/: manual.md
docs/whitepaper/: crowd_density.aux  crowd_density.bbl  crowd_density.bib  crowd_density.blg  crowd_density.tex
gazebo/: CMakeLists.txt
gazebo/models/heisen_camera/: model.config  model.sdf
gazebo/models/heisen_person/: model.config  model.sdf
gazebo/src/: Factory.cc  Factory.hh  HeisenCamera.cc  HeisenCamera.hh  HeisenPerson.cc  HeisenPerson.hh  Snapshot.cc  Snapshot.hh
gazebo/worlds/: Heisen.world
logs/train/: checkpoint
scripts/: clear-examples.sh  clear-images.sh  clear-logs.sh  docker-gzclient.sh  docker-start.sh  docker-stop.sh  generate-images.sh  init.sh  inspect-data.py  server-generate-examples.sh  server-pull.sh  server-push.sh  server-tensorboard.sh  server-test.sh  server-train.sh
